# NEA-Project

./: .gitignore  CMakeLists.txt  Cargo.toml  DOC.md  NEA-Project.geany  Project Document.docx  QoL Improvements  Untitled.ipynb  decision-suite.docx  elfdump  input_val  objdump  symbols
ARCHIVE/: Project Document.docx  README.md
ARCHIVE/GRAPHICS_LIB/: Cargo.toml  design.md
ARCHIVE/GRAPHICS_LIB/src/: button.rs  fs.glsl  graphics.rs  input.rs  lib.rs  main.rs
ARCHIVE/src/: main.rs  ui.rs  vs.glsl
ARCHIVE/src/lib/: ui.rs
GRAPHICS_LIB/: Cargo.toml
GRAPHICS_LIB/src/: DUMP  button.rs  graphics.rs  lib.rs  main.rs
include/: input_validation.h  memcheck.h  tableux.h  visualcell.h
src/: CMakeLists.txt  graphics.rs  lib.rs  main.c  main.rs
src/Simplex_Solver/: a.out  fraction.c  fraction.h  fraction.h.gch  m  m.c  m.h.gch  test.c  utils.h  utils.h.gch
src/lib/: CMakeLists.txt  bigm.c  fraction.c  input.c  input_validation.c  matrix.c  memcheck.c  simplex.c  stages.c  tableux.c  ui.rs  visualcell.c
src/python-prototyping/: M.py  cli.py  lib.py  matrix-repr.py  matrix.py  simplex.py  test_all.py  test_two_stage.py
src/python-prototyping/.pyg3a_build/simplex/: Makefile
src/python-prototyping/.pyg3a_build/test_all/: Makefile
src/python_prototyping/: cli.py  matrix.py  simplex.py  test_big_m.py  test_simplex.py
