[package]
name = "NEA-Project"
version = "0.1.0"
authors = ["Ben Harris <benharris2514@gmail.com>"]
edition = "2021"

[dependencies]
cgmath = "0.17"
glfw = "0.41"
luminance = "0.44"
luminance-derive = "0.7"
luminance-front = "0.4"
luminance-glfw = "0.16"
luminance-windowing = "0.10"
try-guard = "0.2"
wavefront_obj = "10"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
