[package]
name = "graphics_lib"
version = "0.1.0"
edition = "2021"
authors = ["Ben Harris"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17"
glfw = "0.41"
luminance = "0.44"
luminance-derive = "0.7"
luminance-front = "0.4"
luminance-glfw = "0.16"
luminance-windowing = "0.10"
try-guard = "0.2"
wavefront_obj = "10"

